--- a/wallpapers.html
+++ b/wallpapers.html
@@ -66,7 +66,7 @@
 		</div>
 	</header>
 
-	<section>
+	<section class="pt-md-0 pt-5">
 		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
